--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "scripts": {},
   "license": "BSD",
   "dependencies": {
-    "async": "~0.2.10"
+    "acorn": "^5.0.3",
+    "async": "^2.3.0",
+    "fuse.js": "git+https://github.com/petzlux/Fuse.git#master",
+    "send": "^0.15.0"
+},
   },
   "devDependencies": {
     "angular": "1.6.4",
