--- a/geoportal/config.yaml
+++ b/geoportal/config.yaml
@@ -79,6 +79,7 @@ environment:
 - {name: CASIPO_SMTP_SERVER}
 - {name: CASIPO_BCC_ADDRESS}
 - {name: AUTHTKT_TIMEOUT}
+- {name: ENABLE_3D_MODE}
 
 interpreted: {}
 no_interpreted: []
@@ -366,6 +367,7 @@ vars:
         tags: {interface: main, service: js}
         tiles3dLayers: [buildings25d, buildings3d, bridges3d]
         tiles3dUrl: https://3dtiles.geoportail.lu/3dtiles/
+        enable3DMode: '{ENABLE_3D_MODE}'
         proxyWmsUrl: https://wmsproxy.geoportail.lu/ogcproxywms
       fulltextsearch_params: {
         assetsBaseUrl: 'geoportailv3_geoportal:static-ngeo/',
