--- a/geoportal/Dockerfile
+++ b/geoportal/Dockerfile
@@ -110,5 +110,44 @@ RUN pip install --disable-pip-version-check --no-cache-dir --editable=/app/ && \
 COPY ./tools/ /app/tools
 RUN ln -s . geoportal
 
+
+# jsapi generation
+RUN apt-get update && apt-get install --assume-yes wget openjdk-8-jdk
+RUN mkdir /app/apiv3
+WORKDIR /app/apiv3
+RUN mkdir -p /app/apiv3/.build/externs
+RUN wget -O /app/apiv3/.build/externs/angular-1.6.js https://raw.githubusercontent.com/google/closure-compiler/master/contrib/externs/angular-1.6.js
+
+
+RUN wget -O /app/apiv3/.build/externs/angular-1.6-q_templated.js https://raw.githubusercontent.com/google/closure-compiler/master/contrib/externs/angular-1.6-q_templated.js
+
+
+RUN wget -O /app/apiv3/.build/externs/angular-1.6-http-promise_templated.js https://raw.githubusercontent.com/google/closure-compiler/master/contrib/externs/angular-1.6-http-promise_templated.js
+
+
+RUN wget -O /app/apiv3/.build/externs/jquery-1.9.js https://raw.githubusercontent.com/google/closure-compiler/master/contrib/externs/jquery-1.9.js
+COPY ./jsapi/package.json /app/apiv3/
+RUN npm install
+
+ADD ./jsapi /app/apiv3/jsapi
+RUN mkdir -p /app/geoportailv3_geoportal/jsapi/build/fonts
+RUN mkdir -p /app/geoportailv3_geoportal/jsapi/webfonts
+RUN cp node_modules/font-awesome/fonts/* /app/geoportailv3_geoportal/jsapi/build/fonts/
+RUN cp node_modules/font-awesome/fonts/* /app/geoportailv3_geoportal/jsapi/webfonts/
+RUN cp /app/geoportailv3_geoportal/static-ngeo/webfonts/*.* /app/geoportailv3_geoportal/jsapi/build/fonts/
+RUN cp /app/geoportailv3_geoportal/static-ngeo/webfonts/*.* /app/geoportailv3_geoportal/jsapi/webfonts/
+RUN node node_modules/openlayers/tasks/build.js /app/apiv3/jsapi/config.json apiv3.js
+RUN cat node_modules/proj4/dist/proj4.js node_modules/whatwg-fetch/fetch.js node_modules/d3/build/d3.min.js \
+    node_modules/js-autocomplete/auto-complete.min.js \
+    node_modules/promise-polyfill/promise.min.js \
+    node_modules/url-polyfill/url-polyfill.min.js \
+    apiv3.js > concatenated.js
+RUN mv concatenated.js /app/geoportailv3_geoportal/static-ngeo/build/apiv3.js
+RUN ./node_modules/.bin/lessc --clean-css /app/apiv3/jsapi/less/geoportailv3.api.less /app/geoportailv3_geoportal/static-ngeo/build/apiv3.css
+RUN node /app/apiv3/jsapi/jsdoc/get-ol3-doc-ref.js > /app/apiv3/.build/jsdocOl3.js
+
+RUN node node_modules/.bin/jsdoc /app/apiv3/jsapi/jsdoc/api/index.md -c /app/apiv3/jsapi/jsdoc/api/conf.json  -d /app/geoportailv3_geoportal/jsapi/build/apidoc
+RUN cp -R /app/apiv3/jsapi/examples /app/geoportailv3_geoportal/jsapi/build/apidoc/
+WORKDIR /app
 ENTRYPOINT ["/usr/bin/eval-templates" ]
 CMD ["c2cwsgiutils_run"]
